# go-oo-mingw32-soc

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.shared  NEWS  README  TODO  TOTEST  autogen.sh  configure.in  cws-dba23f.diff  download  download.in  emacs.el  intltool-merge.in  intltool-update.in  ooo1.1.spec.in
bonobo/: .cvsignore  AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  local-build.sh
bonobo/data/: .cvsignore  GNOME_OpenOfficeOrg.server.in.in  Makefile.am  ooo-bonobo-control-ui.xml  ooo-bonobo-uno-bootstraprc.in  ooo-bonobo.in
bonobo/po/: .cvsignore  POTFILES.in  be@latin.po  de.po
bonobo/src/: .cvsignore  Makefile.am  main.cxx  ooo-bonobo-control.cxx  ooo-bonobo-control.h  remote-uno-helper.cxx  remote-uno-helper.h  services.h  star-frame-widget.cxx  star-frame-widget.h  string-macros.h  test.cxx
buildbot/: README
desktop/: .cvsignore  .gitignore  Makefile.am  base.desktop.in  base.desktop.in.in  calc.desktop.in  calc.desktop.in.in  database.desktop.in  draw.desktop.in  draw.desktop.in.in  drawing.desktop  drawing.desktop.in  drawing1.1.desktop  drawing1.1.desktop.in  formula.desktop.in  impress.desktop.in  impress.desktop.in.in  math.desktop,in  math.desktop.in  math.desktop.in.in  ooo-extension-manager.desktop.in.in  openoffice-extra.keys.in  openoffice.applications  openoffice.applications.in  openoffice.keys  openoffice.keys.in  openoffice.mime  openoffice.xml  presentation.desktop  presentation.desktop.in  presentation1.1.desktop  presentation1.1.desktop.in  spreadsheet.desktop  spreadsheet.desktop.in  spreadsheet1.1.desktop  spreadsheet1.1.desktop.in  startcenter.desktop.in.in  template.desktop.in  template.desktop.in.in  textdoc.desktop  (+7 more)
desktop/22x22/: Makefile.am
desktop/mimetypes/: Makefile.am
desktop/scalable/: Makefile.am
distro-configs/: .cvsignore  ArchLinux.conf.in  Ark.conf.in  Ark64.conf.in  Common.conf.in  CommonLinux.conf.in  CommonMac.conf.in  CommonWin32.conf.in  CrossWin32.conf.in  Debian.conf.in  Debian64.conf.in  DebianEtch.conf.in  DebianSarge.conf.in  DroplineGNOME.conf.in  DroplineGNOME64.conf.in  FSFhuLinux.conf.in  FSFhuMacOSX.conf.in  FSFhuWindows.conf.in  Frugalware.conf.in  Frugalware64.conf.in  Gentoo.conf.in  GoOoLinux.conf.in  GoOoMacOSX.conf.in  GoOoWin32.conf.in  Makefile.am  Mandriva.conf.in  (+44 more)
extensions/tweakconfig/: Common.xcu  Linguistic.xcu  Makefile.am  Paths.xcu  Recovery.xcu  description.xml  manifest.xml
po/: .cvsignore  Makefile.am  POTFILES.in  POTFILES.skip  README  af.po  ar.po  az.po  be.po  be@latin.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_ZA.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  is.po  it.po  ja.po  ka.po  km.po  ko.po  (+158 more)
po/sdf-templates/: Makefile.am  OxygenOffice.sdf  README  SUSE.sdf  gallery.sdf
scratch/scsolver/source/inc/: Makefile.am  basedlg.hxx  baselistener.hxx  dialog.hxx  global.hxx  listener.hxx  lpbuilder.hxx  msgdlg.hxx  nlpbuilder.hxx  option.hxx  optiondlg.hxx  resmgr.hxx  scsolver.hrc  solvemodel.hxx  solver.hxx  type.hxx  unoglobal.hxx  unohelper.hxx  xcalc.hxx
scratch/scsolver/source/inc/numeric/: Makefile.am  cellfuncobj.hxx  diff.hxx  exception.hxx  funcobj.hxx  lpbase.hxx  lpmodel.hxx  lpsimplex.hxx  lpsolve.hxx  lpuno.hxx  matrix.hxx  nlpbase.hxx  nlpmodel.hxx  nlpnewton.hxx  polyeqnsolver.hxx  quadfitlinesearch.hxx  suppl.hxx  type.hxx
scratch/scsolver/source/inc/tool/: Makefile.am  global.hxx  timer.hxx
scratch/scsolver/source/numeric/: Makefile.am  cellfuncobj.cxx  diff.cxx  diff_test.cxx  exception.cxx  funcobj.cxx  lpbase.cxx  lpmodel.cxx  lpsimplex.cxx  lpsolve.cxx  lpuno.cxx  makefile.mk  matrix.cxx  matrix_test.cxx  nlp_test.cxx  nlpbase.cxx  nlpmodel.cxx  nlpqnewton.cxx  polyeqnsolver.cxx  polyeqnsolver_test.cxx  quadfitlinesearch.cxx  quadfitlinesearch_test.cxx  simplex_test.cxx
scratch/scsolver/workben/addon_pkg/: Addons.xcu  Makefile  Makefile.in  Makefile_SDK.mk  Makefile_build  autogen.sh  configure.ac  description.xml  dialogs.ods
scratch/scsolver/workben/addon_pkg/translation/: Common_en_US.properties  ConstEditDialog_en_US.properties  OptionDialog_en_US.properties  SolverDialog_en_US.properties  SolverDialog_ja_JP.properties  en-US.txt  scsolver_en_US.properties
scratch/scsolver/workben/addon_pkg/translation/de/: license.txt  scsolver.properties
scratch/scsolver/workben/addon_pkg/translation/en-GB/: license.txt
scratch/scsolver/workben/addon_pkg/translation/en-US/: license.txt  scsolver.properties
scratch/scsolver/workben/addon_pkg/translation/es/: license.txt
scratch/scsolver/workben/addon_pkg/translation/fr/: license.txt  scsolver.properties
scratch/scsolver/workben/addon_pkg/translation/ja/: scsolver.properties
scratch/scsolver/workben/addon_pkg/translation/ru/: scsolver.properties
src/: .cvsignore  .gitignore  Debian.dic  Makefile.am  Novell.dic  README  Ubuntu.dic  cli_cppuhelper.dll.config.in  cli_uno_bridge.dll.config.in  glib-1.2.10-ooo.patch  libIDL-0.6.8-ooo.patch  mono-ooo.pc.in  novell-team.xcf  rhino1_5R4.patch  setup_native_packinfo-m25.tar.bz2  setup_native_packinfo-ooo300-m3.tar.bz2  setup_native_packinfo-ooo300-m4.tar.bz2  setup_native_packinfo-ooo310-m2.tar.bz2  sg3.sdg  sg3.thm
src/easter/: generate  people.txt
src/helpcontent2/: Makefile.am
src/icons/: Makefile.am
src/layout/: Makefile.am  README
src/sdf/: Makefile.am  README  calc-formula-option-tree.sdf  cs-CZ-patches.sdf  cs-gallery.sdf  cs-patches.sdf  de-gallery.sdf  de-patches.sdf  es-gallery.sdf  es-patches.sdf  fi-gallery.sdf  fi-patches.sdf  fixes-hu.sdf  fr-gallery.sdf  fr-patches.sdf  hu-fix.sdf  hu-fix2.sdf  hu-fix3.sdf  hu-gallery.sdf  hu-patches.sdf  it-gallery.sdf  it-patches.sdf  ja-gallery.sdf  ja-patches.sdf  ka-gallery.sdf  ka-patches.sdf  ko-gallery.sdf  ko-patches.sdf  nl-gallery.sdf  nl-patches.sdf  ooop-advert  ooop-doc  ooop-samples  ooop-templates  pl-gallery.sdf  pl-patches.sdf  pt-BR-gallery.sdf  pt-BR-patches.sdf  sc-langchooser-fr.sdf  sc-langchooser-ja.sdf  (+6 more)
(+8252 files in other folders)
